added example env

--- a/.gitignore
+++ b/.gitignore
@@ -100,7 +100,9 @@ web_modules/
 
 # dotenv environment variable files
 
-.env.*
+.env.local
+.env.deve*
+.env.prod*
 
 # parcel-bundler cache (https://parceljs.org/)
 
